fixes sticky navbar on ios

--- a/src/app/shared/nav-bar/nav-bar.styles.css
+++ b/src/app/shared/nav-bar/nav-bar.styles.css
@@ -49,13 +49,28 @@
 
 }
 
+nav {
+  position: relative;
+  width:100%;
+  top: 0 !important;
+  z-index: 3 !important;
+}
+#nav-spacer {
+  display: none;
+}
+
 /* Breakpoint for sticky mobile-nav */
 @media only screen and (max-width: 768px) {
   nav {
-    position: sticky !important;
+    /* position: sticky !important;
     position: -webkit-sticky !important;
-    position: -moz-sticky !important;
-    top: 0 !important;
-    z-index: 1 !important;
+    position: -moz-sticky !important; */
+    position: fixed;
+  }
+  #nav-spacer {
+    position: relative;
+    display: block;
+    height: 50px;
+    width: 100%;
   }
 }
